# textractor

./: README.md  pyproject.toml
.github/workflows/: build.yml  deploy.yml  python-app.yml
tests/: test_main.py  test_storage.py
textractor/: main.py  storage.py
