[tool.poetry]
name = "textractor"
version = "0.1.0"
description = "Extract text from websites (or APIs)."
authors = ["Jiri Barton <jbar@tele3.cz>"]
license = "Apache-2.0 license"
readme = "README.md"
packages = [{include = "textractor"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
pytest = "^7.2.1"
httpx = {extras = ["http2"], version = "^0.23.3"}
anyio = "^3.6.2"
pytest-env = "^0.8.1"
pytest-asyncio = "^0.20.3"
pytest-fastapi-deps = "^0.2.3"
azure-cosmos = "^4.3.1"
aiohttp = "^3.8.4"
pytest-httpx = "^0.21.3"
lxml = "^4.9.2"
beautifulsoup4 = "^4.11.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pylint = "^2.16.2"
isort = "^5.12.0"
ipython = "^8.11.0"

[tool.pytest.ini_options]
testpaths = "tests"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
